# paoo-lab

./: CMakeLists.txt  README.md
inc/: Filter.h  FilterAutoGenerated.h  FilterNoCopy.h  Image.h  ImageProcessor.h
src/: CMakeLists.txt  Filter.cpp  FilterAutoGenerated.cpp  FilterNoCopy.cpp  Image.cpp  ImageProcessor.cpp  main.cpp
src/Filter/: CMakeLists.txt  Filter.cpp  Filter.h
src/Image/: CMakeLists.txt  Image.cpp  Image.h
src/ImageProcessor/: CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h
tema-1-2/: CMakeLists.txt
tema-1-2/inc/: Filter.h  Uncopyable.h
tema-1-2/src/: Filter.cpp  FilterAutoGenerated.cpp  ImageProcessor.cpp  main.cpp
tema-3/: CMakeLists.txt
tema-3/inc/: CompressedImage.h  Image.h
tema-3/src/: CompressedImage.cpp  Image.cpp  main.cpp
tema-4/: CMakeLists.txt
tema-4/inc/: Investment.h  InvestmentFactory.h  Lock.h  Stock.h
tema-4/src/: Investment.cpp  InvestmentFactory.cpp  Lock.cpp  Stock.cpp  main.cpp
